Name:               hszephyr
Version:            0.1
License:            BSD3
Category:           Network
Stability:          experimental
Build-Type:         Simple
Cabal-Version:      >= 1.2
Extra-Source-Files:
   Network/Zephyr.hsc, Network/Zephyr/Notice.hsc
Library
  Build-Depends:      base, mtl, bytestring, time
  Extra-Libraries:    zephyr, com_err
  Exposed-Modules:    Network.Zephyr, Network.Zephyr.Notice
