Name:               hszephyr
Version:            0.1
License:            BSD3
Category:           Network
Stability:          experimental
Build-Type:         Simple
Cabal-Version:      >= 1.2
Extra-Source-Files:
   Network/Zephyr/CBits.hsc
Library
  Build-Depends:      base, mtl, bytestring, time
  Extra-Libraries:    zephyr, com_err
  Exposed-Modules:    Network.Zephyr
  Other-Modules:      Network.Zephyr.CBits
Executable test
  Build-Depends:      base, mtl, bytestring, time
  Extra-Libraries:    zephyr, com_err
  Other-Modules:      Network.Zephyr.CBits, Network.Zephyr
  Main-Is:            Test.hs
